fixed/header logo on ios

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -30,18 +30,8 @@
   margin-bottom: 5px;
 }
 
-@keyframes fly {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 .header__logo {
-  animation-name: fly;
-  animation-duration: 2s;
+  max-width: 100px;
   @media screen and (min-width: 768px) {
     margin-right: 90px;
   }
